# k-drama-hit-predictor

./: .gitignore  DEVELOPMENT.md  DEVELOPMENT_LOG.md  HANDOFF_v4.md  HANDOFF_v5.md  LICENSE  README.md  [흥행 디코딩 #1] '21세기 대군부인'부터 '유미의 세포들3' 까지 — 26년 4월 K-드라마 라인업 8_MD버전.md  pyproject.toml  requirements.txt
data/: candidate_dramas.csv  candidate_dramas_quality.json  completed_dramas.csv  filmography_merged.json  namuwiki_meta.json  wikipedia_meta.json
docs/: GITHUB_PUSH_GUIDE.md  LOCAL_EXECUTION_GUIDE.md  [AI학습용] 26년 4-5월 드라마 H-Score 분석_은밀한감사·허수아비·골드랜드·기리고.md  [오늘의 하차_탑승] 《로맨스의 절댓값》 4화 탑승 중 — 김향기의 귀여움이 니치 장르를 구한다 md 버전.md  blog_draft_01_rsi_ott_extension.md  four_dramas_hscore_analysis.md  hscore_rubric.md  july_dramas_hscore_analysis.md  june_dramas_hscore_analysis.md  session_log_for_claude.json  seven_dramas_hscore_analysis.md
output/: hscore_results.json  nielsen_weekly_all_categories_2024_2026.csv  ranking_results.csv  ranking_results.json  recalculated_results_v2.csv  recalculated_results_v2.json  recalculated_results_v3.csv  recalculated_results_v3.json  recalculated_results_v4.csv  recalculated_results_v4.json
scripts/: build_candidate_dramas.py  discover_new_dramas.py  fetch_namuwiki_fallback.py  fetch_netflix_top10.py  fetch_nielsen_weekly.py  fetch_tmdb_filmography.py  fetch_wikipedia_meta.py  merge_nielsen_ratings.py  predict_7_dramas_dynamic.py  predict_drama.py  predict_july_dramas.py  predict_user_request.py  predict_user_request_2.py  rank_candidates.py  recalculate_candidates.py  run_calibration.py  split_filmography.py  update_postlaunch.py
(+144 files in other folders)
